# mlops-pokegen

./: .gitignore  dvc.yaml  pyproject.toml  requirements-mlops.txt  temp.py
.dvc/: config
00_pull_data/: 00_pull_data_dvc.ipynb
01_feature_engineering/: 01_feature_engineering.ipynb  __init__.py
02_preprocessing/: 02_preprocessing.ipynb  __init__.py
03_train_model/: 03_train_model.ipynb  __init__.py
04_evaluation/: 04_evaluation.ipynb  __init__.py
05_model_registry/: 05_model_registry.ipynb  __init__.py
06_deployment/: 06_deployment.ipynb  __init__.py
07_monitoring/: 07_monitoring.ipynb  __init__.py
clean-text-to-keywords/: README.md  example_usage.py  infer_json_usage.py  json_inference.py  json_template_example.json  keyword_extractor.py  requirements.txt  test_json_inference.py  test_keyword_extractor.py
clean-text-to-keywords/.ipynb_checkpoints/: keyword_extractor-checkpoint.py  test_keyword_extractor-checkpoint.py
configs/: pipeline.yaml
data/raw/: cards.dvc
deploy/model-registry/: kustomization.yaml  model-registry-allow.yaml  sidecar-model-registry-ui.yaml
pipelines/: kfp_pipeline.py  pokegen_pipeline.yaml  run_pipeline.py
pokegen_shared.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
shared/: logging_utils.py  paths.py  pokemon_dataset.py  sd_lora_models.py  step_artifacts.py  train_distributed.py
src/: __init__.py
src/components/: __init__.py  evaluation.py  feature_engineering.py  model_registry.py  preprocessing.py  pull_data.py  train_model.py
